--- a/pom.xml
+++ b/pom.xml
@@ -103,8 +103,11 @@
       <scope>runtime</scope>
     </dependency>
 
-
-
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>9.22.3</version>
+    </dependency>
 
   </dependencies>
   <build>
@@ -118,6 +121,21 @@
                   <target>16</target>
               </configuration>
           </plugin>
+        <plugin>
+          <groupId>org.flywaydb</groupId>
+          <artifactId>flyway-maven-plugin</artifactId>
+          <version>9.22.3</version>
+
+          <configuration>
+            <url>jdbc:postgresql://localhost:5432/lab3</url>
+            <user>admin</user>
+            <password>admin</password>
+            <locations>
+              <location>filesystem:src/main/resources/db/migration</location>
+            </locations>
+            <baselineOnMigrate>true</baselineOnMigrate>
+          </configuration>
+        </plugin>
       </plugins>
   </build>
 </project>
