--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,13 @@
-name: Build, Test, Deploy
+name: Build, Deploy
 
 on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-
-    - name: Build and push docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./
-        push: true
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/lab4-backend:latest
-          ${{ secrets.DOCKER_USERNAME }}/lab4-backend:${{ github.sha }}
-
   deploy-on-server:
     runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
+    
+    steps:    
     - name: Stop and deploy
       uses: appleboy/ssh-action@v1
       with:
@@ -44,10 +19,10 @@ jobs:
 
           cd ~/lab4/backend
 
-          docker pull ${{ secrets.DOCKER_USERNAME }}/lab4-backend:latest
-
           docker-compose down || true
 
-          docker-compose up -d
+          git pull
+
+          docker-compose up -d --build
 
           echo "Finish deployment"
